...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/directions_btn"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:maxLines="1"
        android:text="@string/directions_title"
        android:textSize="14sp"
        android:onClick="onDirectionsClicked"
...
